[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/BulletHellper/UI/PatternVisualize.gd" type="Script" id=1]
[ext_resource path="res://addons/BulletHellper/UI/PatternBuildUI.gd" type="Script" id=2]
[ext_resource path="res://addons/BulletHellper/UI/SaveLoadArea.gd" type="Script" id=3]
[ext_resource path="res://addons/BulletHellper/UI/ParameterContainers/BulletParameters.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/BulletHellper/UI/ToolTipPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/BulletHellper/TestingProps/PropPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/BulletHellper/Source/BulletPattern.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/BulletHellper/UI/PatternControls.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/BulletHellper/UI/ParameterContainers/BasicParameters.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/BulletHellper/UI/ParameterContainers/DirectionParameters.tscn" type="PackedScene" id=10]

[node name="PatternVisualize" type="Node2D"]
script = ExtResource( 1 )

[node name="DefaultPatternPos" type="Position2D" parent="."]
position = Vector2( 350, 280 )

[node name="BulletPattern" parent="." instance=ExtResource( 7 )]
position = Vector2( 350, 280 )
rotating_speed = 0.0

[node name="BulletContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="SaveLoadArea" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -50.0
rect_min_size = Vector2( 400, 50 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/SaveLoadArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.00003
margin_bottom = -3.8147e-06
color = Color( 0.223529, 0.203922, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="UI/SaveLoadArea"]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 160, 20 )
text = "Save Pattern As Scene"

[node name="LoadButton" type="Button" parent="UI/SaveLoadArea"]
margin_left = 180.0
margin_right = 351.0
margin_bottom = 20.0
text = "Load Pattern From Scene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePath" type="LineEdit" parent="UI/SaveLoadArea"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 49.0
rect_min_size = Vector2( 390, 0 )

[node name="UIContainer" type="Control" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -450.0
margin_bottom = 600.0
rect_min_size = Vector2( 450, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnableButton" type="Button" parent="UI/UIContainer"]
margin_left = 25.0
margin_top = 15.0
margin_right = 425.0
margin_bottom = 35.0
rect_min_size = Vector2( 400, 0 )
toggle_mode = true
text = "BeginTest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleMoveButton" type="Button" parent="UI/UIContainer"]
margin_left = 25.0
margin_top = 40.0
margin_right = 220.0
margin_bottom = 60.0
rect_min_size = Vector2( 195, 0 )
toggle_mode = true
text = "ToggleMovePattern"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetPosButton" type="Button" parent="UI/UIContainer"]
margin_left = 225.0
margin_top = 40.0
margin_right = 420.0
margin_bottom = 60.0
rect_min_size = Vector2( 195, 0 )
text = "Reset Pattern Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Optimization" type="HBoxContainer" parent="UI/UIContainer"]
margin_left = 25.0
margin_top = 80.0
margin_right = 425.0
margin_bottom = 94.0
rect_min_size = Vector2( 400, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletsOnScreen" type="Label" parent="UI/UIContainer/Optimization"]
margin_right = 374.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Bullets"

[node name="FPS" type="Label" parent="UI/UIContainer/Optimization"]
margin_left = 378.0
margin_right = 400.0
margin_bottom = 14.0
text = "FPS"

[node name="Parameters" type="VBoxContainer" parent="UI/UIContainer"]
margin_left = 25.0
margin_top = 100.0
margin_right = 425.0
margin_bottom = 760.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatternControls" parent="UI/UIContainer/Parameters" instance=ExtResource( 8 )]
margin_right = 400.0
margin_bottom = 72.0

[node name="Title" type="Label" parent="UI/UIContainer/Parameters"]
margin_top = 76.0
margin_right = 400.0
margin_bottom = 90.0
text = "Parameters:"

[node name="BasicParameters" parent="UI/UIContainer/Parameters" instance=ExtResource( 9 )]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 218.0

[node name="DirectionParams" parent="UI/UIContainer/Parameters" instance=ExtResource( 10 )]
margin_top = 222.0
margin_right = 400.0
margin_bottom = 602.0

[node name="BulletParams" parent="UI/UIContainer/Parameters" instance=ExtResource( 4 )]
margin_top = 606.0
margin_right = 400.0
margin_bottom = 870.0

[node name="ToolTipPopup" parent="UI" instance=ExtResource( 5 )]
margin_left = 10.883
margin_top = -116.992
margin_right = -763.117
margin_bottom = -916.992

[node name="PropPlayer" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="UI/UIContainer/EnableButton" to="UI" method="_on_enable_pressed"]
[connection signal="toggled" from="UI/UIContainer/ToggleMoveButton" to="UI" method="_on_move_toggled"]
[connection signal="pressed" from="UI/UIContainer/ResetPosButton" to="UI" method="_reset_pattern_pos"]
